# mai

./: .gitignore  README.md  augmentation.py  hyperparams.py  inference.py  label.py  model.py  pyproject.toml  requirements.txt  resnet.py  train.py
