[tool.poetry]
name = "mai"
version = "0.1.0"
description = "Multilayer Authenticity Identifier"
authors = ["Kenneth <kennethnym@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
mlx = "^0.11.0"
datasets = "^2.19.0"
albumentations = "^1.4.4"
numpy = "^1.26.4"
modal = "^0.62.103"
torch = "^2.2.2"


[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
